--- a/src/pages/blog/[blogpost].astro
+++ b/src/pages/blog/[blogpost].astro
@@ -75,9 +75,14 @@ const categoryLink = post.data.category ? {
   label: post.data.category,
   href: `/blog/category/${post.data.category.toLowerCase().replace(/\s+/g, '-')}`
 } : null;
+
+const postUrl = `https://shopperqueries.com/blog/${post.id.replace(/\/index\.mdx?$/, '')}`;
+const canonicalUrl = postUrl;
+
 ---
 
 <Layout title={post.data.title} description={post.data.description}>
+  <link rel="canonical" href={canonicalUrl} />
   <Container>
     <Breadcrumb items={breadcrumbItems} />
     
@@ -140,3 +145,24 @@ const categoryLink = post.data.category ? {
     </div>
   </Container>
 </Layout>
+
+<script is:inline type="application/ld+json">
+  {JSON.stringify({
+    "@context": "https://schema.org",
+    "@type": "BlogPosting",
+    "headline": post.data.title,
+    "description": post.data.description,
+    "datePublished": post.data.date.toISOString(),
+    "author": {
+      "@type": "Person",
+      "name": "Shopperqueries Team",
+      "url": "https://shopperqueries.com"
+    },
+    "image": "https://shopperqueries.com/default-image.jpg",
+    "url": postUrl,
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": postUrl
+    }
+  })}
+</script>
