--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ const blogListSchema = {
       },
       "datePublished": post.data.date.toISOString(),
       "image": post.data.image ?? "https://shopperqueries.com/default-image.jpg",
-      "url": `https://shopperqueries.com/blog/${post.id.replace(/^.*\//, '')}`
+      "url": `https://shopperqueries.com/blog/${post.id.replace(/\/index\.mdx?$/, '')}`
     }
   }))
 };
