sitemap correction, nav format

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,11 +13,11 @@ import { SITE } from "@consts";
         </div>
       </Link>
       <nav class="flex items-center gap-1 text-sm">
-        <Link href="/categories">categories</Link>
+        <Link href="/categories">Categories</Link>
         <span>
           {`/`}
         </span>
-        <Link href="/tags">tags</Link>
+        <Link href="/tags">Tags</Link>
         <span>
           {`/`}
         </span>
